# rtmp-publish-demo

./: .gitignore  CMakeLists.txt  README.md
src/: ipc_simulator.c  main.c
